# python-project-lvl2

./: .gitignore  .travis.yml  Makefile  README.md  pyproject.toml  test.json  test.yaml
gendiff/: __init__.py  difference.py  files.py  generate_cli_settings.py  generate_difference.py  open_file.py  open_files.py  plain_render.py  print_difference_file.py  render_difference_file.py  test.py  tmp.py
gendiff/format/: dictionary.py  format_dictionary.py  format_json.py  format_plain.py  plain.py
gendiff/renderers/: dictionary_render.py  json_renderer.py  plain_render.py  render_difference.py
gendiff/scripts/: gendiff.py
gendiff/tests/fixtures/: test_generate_difference.py
gendiff/tests/fixtures/test_files/: add_one.json
tests/: test_generate_difference.py
tests/fixtures/: answer_added_all.txt  answer_changes.txt  answer_json_changes.json  answer_minus_one.txt  answer_plain_add_all.txt  answer_plain_changes.txt  answer_plain_remove_complex_values.txt  answer_plus_one.txt  answer_removed_all.txt  answer_removed_and_added.txt  test_add_one.json  test_generate_difference.py
tests/fixtures/right_answers/: added_all.txt  changes.txt  json_changes.txt  plain_add_complex_values.txt  plain_changes.txt  plus_one.txt  removed_all.txt  removed_and_added.txt
tests/fixtures/test_files/: before_3.json
